pushing pictures  and filter design to github

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -39,6 +39,11 @@
       </div>
     </div>
     
+  <section class="tour-filter-section">
+    <!-- <div class="tour-filter-container"> -->
+      <app-tour-filter (searchTriggered)="handleSearch($event)"></app-tour-filter>
+    <!-- </div> -->
+  </section>
     <app-destinations></app-destinations>
    
   </header>
