--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -197,3 +197,12 @@ h2._active {
 .main-title h2 {
   width: 100%;
 }
+
+  .tour-filter-section {
+    position: relative;
+    // position: sticky;
+    top: 0;
+    z-index: 1000;
+    // background: var(--background-gradient);
+    padding: 1rem 0;
+  }
