--- a/src/app/pages/tour-package/tour-package.component.scss
+++ b/src/app/pages/tour-package/tour-package.component.scss
@@ -40,6 +40,7 @@
         font-size: clamp(2.2rem, 6vw, 3.8rem);
         font-weight: 700;
         margin-bottom: 1rem;
+        color:rgb(251, 255, 0);
       }
 
       .subtitle {
