--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -9,13 +9,13 @@
         <div class="swiper-slide" *ngFor="let destination of destinations; let i = index">
           <div class="destination-card fade-in-up" [style.--delay]="i">
             <div class="destination-image">
-              <img [src]="destination.image" [alt]="destination.name">
+              <img [src]="destination.image_url" [alt]="destination.title">
             </div>
             <div class="destination-content">
-              <h3>{{ destination.name }}</h3>
+              <h3>{{ destination.title }}</h3>
               <p>{{ destination.description }}</p>
               <a *ngIf="destination.id" [routerLink]="['/destination', destination.id]" class="btn-explore">
-                Explore {{ destination.name.split(',')[0] }}  
+                Explore {{ destination.title.split(',')[0] }}  
                 <i class="fas fa-arrow-right"></i>
               </a>
             </div>
