some changes pushing

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -23,13 +23,17 @@
           </li>
           <li>
             <i class="fas fa-phone-alt"></i>
+            
             <a href="tel:+918981663005">+91 8981663005</a><br />
             <a href="tel:+913335474551">+91 33 3547 4551</a>
           </li>
           <li>
             <i class="fas fa-envelope"></i>
-            <a href="mailto:info@thesunflowertrip.com">info&#64;thesunflowertrip.com</a><br />
-            <a href="mailto:bookings@thesunflowertrip.com">bookings&#64;thesunflowertrip.com</a>
+                <div class="contact-number">
+
+                  <a href="mailto:info@thesunflowertrip.com">info&#64;thesunflowertrip.com </a><br  />
+                  <a href="mailto:bookings@thesunflowertrip.com"> bookings&#64;thesunflowertrip.com</a>
+                </div>
           </li>
           <li>
             <i class="fas fa-clock"></i>
