--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -190,6 +190,11 @@ body {
 
 /* Wide Mobile Styles (for phones with wider screens) */
 @media (max-width: 768px) {
+//   .contact-number{
+//   display: flex;
+//   flex-direction: row;
+
+// }
   .map {
     padding: 60px 0;
   }
